--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,14 @@
-Flask==2.0.1
 neo4j==4.4.7
 python-dotenv==0.19.0
+Flask==2.1.3
+Flask-CORS==3.0.10
+Jinja2==3.1.2
+MarkupSafe
+Werkzeug==2.2.2
+Blinker==1.7.0
+Click==8.1.7
+dnspython
+itsdangerous==2.1.1
+pip==22.0.3
+pymongo==4.0.1
+Flask-RESTful==0.3.10
